crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_completion_resolve__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "element_id": "<UUID>",
    "uri": "<BOOK>/examples/coffee-machine/views.sysml"
  },
  "response": {
    "documentation_markdown": "4) Action-flow view — the brew cycle, ordered by control flow.\nDifferent supertype, different shape; no other change."
  }
}
