crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_completion_resolve__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "element_id": "<UUID>",
    "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
  },
  "response": {}
}
